# GradSymposium2026

./: .env.example  .gitignore  CLAUDE.md  Grad Student Expo_Rubrics_final.xlsx  README.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: assignments.py  auth.py  events.py  judge_portal.py  judges.py  projects.py  results.py  router.py  rubrics.py  scores.py
backend/app/auth/: jwt.py  password.py
backend/app/db/: engine.py  seed.py
backend/app/models/: __init__.py  event.py  feedback.py  judge.py  judge_assignment.py  project.py  rubric.py  rubric_criterion.py  score.py  score_override.py  user.py
backend/app/schemas/: auth.py  event.py  judge.py  project.py  results.py  rubric.py  score.py
backend/app/services/: access_code.py  csv_import.py  excel_export.py  results_service.py
backend/migrations/: env.py
demo/: symposium-scoring-demo.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: AdminShell.tsx  JudgeShell.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/pages/admin/: AdminDashboardPage.tsx  AdminLoginPage.tsx  AssignmentsPage.tsx  JudgesPage.tsx  ProjectsPage.tsx  ResultsPage.tsx  RubricsPage.tsx
frontend/src/pages/judge/: JudgeLoginPage.tsx  JudgeProjectListPage.tsx  (+1 more)
frontend/src/types/: index.ts
